submit files on DL2

--- a/Notebooks/Untitled.ipynb
+++ b/Notebooks/Untitled.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f85fb211",
+   "id": "a1ceccac",
    "metadata": {},
    "source": [
     "# CPSC_Assignment\n",
-    "## - Notebook: \n",
-    "        - assignment 3-1\n",
+    "## Assignment3\n",
+    "### - Notebook: \n",
+    "        - assignment 3-1: SF Salaries Exercise \n",
     "        - assignment 3-2: perform explorotary data analysis for \"titanic\" dataset\n",
     "        - assignment 3-3: perform explorotary data analysis for \"train_house_price\" dataset\n",
-    "## - Doc: \n",
+    "### - Doc: \n",
     "        - assignment 3-2 conclusion for for \"titanic\" dataset\n",
     "        - assignment 3-3 conclusion for \"train_house_price\" dataset\n",
-    "     \n",
+    "### - Data:\n",
+    "        - assignment 3-1:Salaries.csv\n",
+    "        - assignment 3-2:titanic.csv\n",
+    "        - assignment 3-3:train_house_price.csv\n",
     "   "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a582282e",
+   "id": "766a95bd",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b24ffa50",
+   "id": "3b49c175",
    "metadata": {},
    "outputs": [],
    "source": []
